--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.28",
+    "expo-constants": "~16.0.2",
     "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
