--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "web": "expo start --web",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
-    "stylelint": "stylelint '**/*.{css,scss,styled.js,ts,tsx}'",
-    "stylelint:fix": "stylelint '**/*.{css,scss,styled.js,ts,tsx}' --fix",
     "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
@@ -33,9 +31,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-query": "^3.39.3",
-    "react-query-devtools": "^2.6.3"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -51,11 +47,6 @@
     "eslint-plugin-react-native": "^4.1.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
-    "stylelint": "^16.10.0",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.8.1",
     "typescript": "4.5.2"
   },
   "private": true
